--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.7",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "element-ui": "^2.12.0",
     "lodash": "^4.17.15",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
